2011-08-21  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c, src/support.c: Use accessor function instead of direct
	access to various struct members. Compiler flag 'GSEAL_ENABLE' is used
	to detect such direct access.
	* src/callbacks.c, src/interface.c, src/gui-input-symbol.c,
	src/gui-app.c: Replace deprecated API calls with those available in
	recent GTK versions.
	* configure.in: Bumped required GTK version as per above changes.
	* installer.nsi.in, WINDOWS-PORT.txt: Updated Windows specific files as per
	recent changes.

2011-05-14  Onkar Shinde  <onkarshinde@gmail.com>

	* po/kn.po, po/el.po, AUTHORS: Updated translations from launchpad.
	* src/callbacks.[c,h], src/interface.c: Remove '8085 Manual' menu as it
	provides same functionality as Help -> Contents menu.
	* src/interface.c: Fix title of window that shows tutorial.
	* po/gnusim8085.pot, po/*.po: Updated translatable strings due to the
	recent code changes.

2011-05-12  Onkar Shinde  <onkarshinde@gmail.com>

	* configure.in: Back to development, version bumped.
	* Makefile.am, configure.in, doc/Makefile.am, pixmaps/Makefile.am,
	po/POTFILES.in, src/Makefile.am: Remove references to Anjuta.

2011-02-20  Onkar Shinde  <onkarshinde@gmail.com>

	* po/ta.po, po/LINGUAS, AUTHORS, NEWS: New Tamil translation from
	launchpad. Ready for release.

2010-12-12  Onkar Shinde  <onkarshinde@gmail.com>

	* src/interface.c: Fix incorrect use of 'GTK_CHECK_VERSION' macro.
	* src/file-op.c, src/file-op-gio.c: Added code to save last directory
	from/to where file was opened/saved. Fixes bug LP:#680100.

2010-10-11  Aanjhan Ranganathan  <aanjhan@tuxmaniac.com>

	* src/8085-instructions.c: Added patch for bug LP: #579320. Thanks
	to Debjit Biswas.

2010-09-26  Onkar Shinde  <onkarshinde@gmail.com>

	* src/callbacks.c: Add an error message to be shown when assembly
	tutorial file is not found. Mark 'Select font' string for translation.
	* po/gnusim8085.pot: Update to include latest strings.